Fixed font-size on small screen

--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@ mark {background-color:  rgb(225, 241, 153);
         .prompt {
                 width:95%;
                 padding: 2px;
-                text-align: center;
+                text-align: left;
+                font-size: 14px;
         }
 
         .result {
@@ -79,14 +80,12 @@ mark {background-color:  rgb(225, 241, 153);
 
         .number-box {
                 margin-top: 15px;
+                margin-left: 80px;
         }
 
         .button {
                 margin-bottom: 10px;
-        }
-    
-        .text {
-                font-size: 15px;
+                margin-left: 16px;
         }
 
         h2 {
@@ -102,7 +101,6 @@ mark {background-color:  rgb(225, 241, 153);
         
         .prompt {
                 width: 90% ;
-                padding: 5px;
         }
 
         .text {
